Master AV ignore on Alex hqpc

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ sysinfo.txt
 NotForBroadcastPOC-Sourcetree/Temp/UnityLockfile
 NotForBroadcastPOC-Sourcetree/Library/CurrentLayout.dwlt
 NotForBroadcastPOC-Sourcetree/Packages/manifest.json
+NotForBroadcastPOC-Sourcetree/Assets/Master AV/
