--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ sysinfo.txt
 *.unitypackage
 NotForBroadcastPOC-Sourcetree/Temp/UnityLockfile
 NotForBroadcastPOC-Sourcetree/Library/CurrentLayout.dwlt
+NotForBroadcastPOC-Sourcetree/Assets/Master AV/
