Work on Design document (updated in DROPBOX)

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,5 @@ Advert 01.wav
 Advert 02.pkf
 Advert 03.pkf
 Design Document/Design Document - 10 Page.indd
+Design Document/NFB - Design Document Pictures/squares/screenshots.psd
+Design Document/NFB - Design Document Pictures.zip
